User registration with token activation implemented. When a user registers, a token is saved in the database. The user has to verify their token by using the new /users/activate/{token} route. When user actives, their is_active status turns true and the token row gets deleted. Each token has a 3 day expiration limit.
